<resources>
    <string name="app_name">Smart_switch</string>

    <string name="about">Разработано "Appstudio_EZ" 2020г.
        \n Smart_Switch v.1.1
        \n Требуемая версия Android 4.3 или более поздняя.\n\n</string>
    <item type="id" name="ID_but1week"/>
    <item type="id" name="ID_but2week"/>
    <item type="id" name="ID_but3week"/>
    <item type="id" name="ID_but4week"/>
    <item type="id" name="ID_but5week"/>
    <item type="id" name="ID_but6week"/>
    <item type="id" name="ID_but7week"/>
    <item type="id" name="ID_butweekOK"/>
    <string name="rst_mod">Внимание!\nАктивация этого режима удалит все существующие настройки расписания,
        а также настройки подключения к дамашней сети.\n Активировать сброс? </string>

    <string name="help_sw1">
        \n  Приложение “Smart Switch” реализует возможность удаленного управления нагрузкой до 3,5кВт как через локальную сеть “WIFI”,
        так и через интернет, находясь в любой точке мира, при условии наличия подключения смартфона к сетям 3G – 4G. В качестве
        нагрузки может выступать розетка 220В или любой электро-прибор мощностью до 3,5кВт. Приложение работает совместно с модулем
        “Smart Switch”, который  подключается к локальной сети через WI-FI роутер, являющийся неотъемлемой частью в любом современном
        жилище (дом, квартира, дача).
    </string>
    <string name="help_sw2">
        \n  На главный экран выведена кнопка управления нагрузкой (включено/выключено), которая также отображает статус текущего состояния
        нагрузки: зеленая - нагрузка включена, красная - выключена. Кроме этого отображается текущий режим работы (сутки/неделя), название
        объекта, адрес сервера в локальной сети и текущее время сервера.\n
    </string>
    <string name="help_sw3">
        \n  В режиме работы "сутки" нагрузка включается ежесуточно в соответствии с заданными настроками времени включения и выключения.
        В режиме работы "неделя" нагрузка включается по дням недели согласно заданному расписанию для конкретного дня недели. Включение
        и выключение в соответствии с заданной настройкой "по дате" происходит в независимости от текущего режима работы. При подключении
        модуля к локальной сети происходит синхронизация времени с сервером точного времени, после чего он готов работать в соответствии
        с выбранным режимом и расписанием. При отсутствии интернета в момент включения модуль каждые 40 секунд будет пытаться подключиться
        к серверу точного времени и синхронизировать время и дату. Можно также синхронизировать системную дату и время путем подачи команды
        модулю через меню приложения. Если синхронизация не выполнена – модуль не будет работать по расписанию.
    </string>
    <string name="help_sw4">
          Для настройки параметров  подключения к локальной сети и задания других параметров приложения необходимо перейти в меню - кликнуть
        на пиктограмму в верхнем левом углу экрана.
    </string>
    <string name="help_sw5">
          При первом запуске приложения необходимо выполнить сопряжение модуля управления с приложением “Smart Switch”.
        Для этого нужно сообщить устройству логин и пароль локальной сети. При первом включении модуль разворачивает собственную сеть WI-FI
        “Smart_Home_EZ”. Пароль 12345678. Можно подключиться к ней и работать с устройством в этой сети, IP адрес сервера в этом случае в
        приложении должен быть выставлен 192.168.4.1 (по умолчанию он уже выставлен). В смартфонах версии андроид выше 7.1 желательно
        предварительно в настройках домашней сети выключить автоподключение, а также зайти в настройки -> приложения -> Smart Switch -> разрешения ->
        Состояние WIFI – разрешить подключение/отключение WIFI без запроса. Иногда требуется также включить гео-локацию. Ниже приведена пошаговая
        инструкция настройки.
        \n1.  Подключаем смартфон к сети “Smart_Home_EZ”, модуль “ Smart Light ” должен быть включен.
        \n2.  Запускаем приложение и заходим в пункт меню настройка сети.
        \n3.  Верхнее поле будет заполнено именем сети “Smart_Home_EZ”, вместо него вводим название вашей домашней сети, далее заполняем поле пароль для
        данной сети WI-FI.
        \n4.  Нажимаем кнопку сохранить и ждем около 2 минут (устройство сохранит в памяти введенные параметры, подключится к сети и получит IP адрес,
        сообщит приложению полученный IP).  В случае успешной настройки экран меню пропадет, а на главном экране появится всплывающее сообщение «Выполнено!».
        \n5.  Закрываем приложение, отключаемся от сети “Smart_Home_EZ” и подключаемся к домашней сети (в процессе настройки смартфон подключится к
        сети “Smart_Home_EZ”).
        \n6.  Выключаем модуль и включаем снова через 5 – 10 сек.
        \n7.   Запускаем приложение.
        \n8.  В настройках роутера WI-FI необходимо зарегистрировать подключенное устройство и закрепить за ним постоянный IP адрес.
        \nВ дальнейшем, приложение при запуске будет автоматически соединяться с устройством при условии нахождения смартфона в домашней сети, а также
        в любом другом месте, при наличии интернета и соответствующей настройке роутера.
        \nВнимание! При смене настроек домашней сети или при необходимости подключить модуль к другой сети, перед этим необходимо сбросить его к настройкам
        по умолчанию.
        \nВажно! Пароль сети, в которой предполагается дальнейшая работа модуля должен содержать 8 символов.
    </string>
    <string name="help_sw6">
        \n  При работе приложения настройки расписания сохраняются в приложении  и также в памяти устройства. Возможна ситуация когда данные расписания
        были утеряны (например, когда приложение было удалено и повторно установлено). В этом случае, нужно синхронизировать данные между устройством
        и приложением  через меню, отправив устройству команду "Синхр. с модулем расписания". При отсутствии интернета синхронизация даты и времени
        между устройством и приложением выполняется через команду меню "Синхр. времени". Приложение может работать с несколькими модулями (управление
        различными нагрузками). Для каждого модуля соответственно выполняется настройка подключения к домашней сети, так как это было описано выше.
        Каждому модулю присваивается свой IP-адрес и название, по умолчанию Объект 1 …Объект N.  Вызов меню для переключения между объектами осуществляется
        длительным нажатием на название объекта, либо на его IP-адрес на главном экране. В появившемся меню коротким нажатием на нужный объект выполняется
        переключение. \nНазвание  Объект N можно переименовать по своему усмотрению, вход через меню вызванное длительным нажатием на название объекта.
        \nУдаление объекта производится также длительным нажатием, вход через меню вызванное длительным нажатием на его  IP-адрес.
        \nДобавить новое устройство можно также вручную записав его IP-адрес через меню вызванное длительным нажатием  на его  IP-адрес.
        \nПереключение режимов работы сутки – неделя осуществляется длительным нажатием на строку отображающую режим работы "Сутки"/"Неделя".
        \nДля работы через интернет необходимо настроить VPN подключение на роутере и использовать его, находясь вне зоны действия  домашней сети.
        Ниже по ссылке, приведен пример настройки VPN-туннеля IPSec, между интернет-центром Keenetic и мобильным устройством на базе операционной
        системы Android.
    </string>
    <string name="help_sw7">
        https://help.keenetic.com/hc/ru/articles/360001085499-Подключение-к-серверу-IPSec-VPN-IPSec-Virtual-IP-с-мобильного-устройства-из-ОС-Android
    </string>

</resources>
